--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-    "name": "web-api-bp",
+    "name": "poke-api",
     "version": "1.0.0",
     "description": "",
     "main": "dist/index.js",
     "scripts": {
-        "build": "babel server/ -d dist/",
+        "build": "babel src/ -d dist/",
         "start": "node dist/index",
-        "dev": "nodemon --exec babel-node server/index",
+        "dev": "nodemon --exec babel-node src/index",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/MauroCicerchia/web-api-bp.git"
+        "url": "git+https://github.com/MauroCicerchia/poke-api.git"
     },
     "author": "Mauro Cicerchia",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/MauroCicerchia/web-api-bp/issues"
+        "url": "https://github.com/MauroCicerchia/poke-api/issues"
     },
-    "homepage": "https://github.com/MauroCicerchia/web-api-bp#readme",
+    "homepage": "https://github.com/MauroCicerchia/poke-api#readme",
     "dependencies": {
         "bluebird": "^3.7.2",
+        "endpoint-handler": "^2.0.3",
         "express": "^4.17.1",
         "lodash": "^4.17.15",
         "mongoose": "^5.9.2",
         "morgan": "^1.9.1",
+        "pokedex-promise-v2": "^3.3.0",
         "winston": "^3.2.1"
     },
     "devDependencies": {
