--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "mongoose": "^5.9.2",
         "morgan": "^1.9.1",
         "pokedex-promise-v2": "^3.3.0",
+        "request": "^2.88.2",
+        "request-promise": "^4.2.6",
         "winston": "^3.2.1"
     },
     "devDependencies": {
@@ -35,6 +37,8 @@
         "@babel/core": "^7.12.7",
         "@babel/node": "^7.12.6",
         "@babel/preset-env": "^7.12.7",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^7.18.0",
         "nodemon": "^2.0.6"
     }
 }
